--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet"> 
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 	</head>
 	<body class="is-preload">
 
@@ -48,7 +49,7 @@
 								<!--ancien bouton <a href="#work" class="button large scrolly">Learn about what I do</a>-->
 	<!-- test bouton -->
 	<div>
-	<a class = "btn" href="#">Download my resume</a>
+	<a class = "btn" href="#">Link num #1</a>
 </div>
 
 
