--- a/index - Copie 2022 04 14 2352.html
+++ b/index - Copie 2022 04 14 2352.html
@@ -62,32 +62,29 @@
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-comments"></span>	
+								<span class="icon featured fa-comments"></span>
 								<h3>Data Analysis</h3>
-								<p>Start from a problematic, then analyze the data to identify relevant insights.
-									<br>Objective is to answer the right questions in order to help the company making the right decisions.<br><br></p>
+								<p>Ornare nulla proin odio consequat s. Ornare nulla proin odio consequat s</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
 								<h3>Interactive Dashboard</h3>
-								<p>Define the needs with business representatives. Then design a dashboard helping decision-maker to get real-time info and insights, and take the best decisions.</p>
+								<p>Define the needs with business representatives. Then design a dashboard helping to take the best decisions, using facts and data.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Data Prediction</h3>
-								<p>Use statistics, programming and machine learning techniques to identify patterns.
-									These predictions can be used to make the right decisions.<br><br><br>
-								</p>
+								<h3>Data Analysis</h3>
+								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
 							</section>
 						</div>
 					</div>
 					<footer>
 						<h2>My Skills.</h2>
-						<p>6+ years of experience as <u>Project Manager</u> | 1 year of experience as <u>Data Analyst</u></p>
+						<p>6+ years of experience as Project Manager | 1 year of experience as Data Analyst</p>
 						<p>Power BI | Python | SQL | Excel | Spreadsheet</p>
 
 						<a href="#portfolio" class="btn scrolly">See some of my recent work</a>
@@ -108,16 +105,16 @@
 							<article class="box style2"><!--CSS changé pour style 2-->
 								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 								<h3><a href="#">Sales analysis with Python</a></h3>
-								<p>Obj : use <strong>Python</strong> to extract, clean and analyse sales data. Use a scalable and automated method.<br><br>
+								<p>Obj : use Python to extract, clean and analyse sales data. Use a scalable and automated method.<br><br>
 									Extracting data from a folder full of raw csv, Data cleaning using Pandas, Exploratory Data Analysis, then Data Vizualisation w/ Matplotlib.  
-									<a href="#portfolio" class="image icon"><img src="images/github_logo.svg" alt="github_logo" /></a></p>  
+									<a href="#portfolio" class="image icon"><img src="images/github_logo.png" alt="github_logo" /></a></p>  
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 								<h3><a href="#">Project 2</a></h3>
-								<p>Obj : design an user friendly and real-time Dashboard, using cloud stored data.<br><br>
+								<p>Obj : design an user friendly and automated Dashboard, using cloud stored data.<br><br>
 									Dashboard design with Power BI.</p>
 									<a href="#portfolio" class="image icon"><img src="images/PowerBI_logo.png" alt="PowerBI_logo" /></a></p>
 							</article>
@@ -126,8 +123,8 @@
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 								<h3><a href="#">Project 3</a></h3>
-								<p>Obj : Extract and use data stored in Datawarehouse.<br><br>
-									Use MySQL to request data. Then perform EDA. Design an interactive dashboard.</p>
+								<p>Obj : Use data stored in Datawarehouse.<br><br>
+									Use MySQL to request data. Perform EDA. Design an interactive dashboard.</p>
 									<a href="#portfolio" class="image icon"><img src="images/logo_mysql.png" alt="MySQL_logo" /></a></p>
 							</article>
 						</div>
