--- a/index.html
+++ b/index.html
@@ -95,42 +95,75 @@
 				</div>
 			</article>
 
-		<!-- Portfolio -->
+		
+
+<!-- test about me 
+<div class="containerbout">
+	<div class="rowbout">
+	  <div class="col-xs-12bout">		
+
+<div class="card">
+			<div class="card-block">
+			  <h2>About me</h2>
+			  <div class="rowbout">
+				<div class="col-md-4bout">
+				  <p><img src="images\pic00.jpg" class="img-responsivebout" alt=""></p>
+				</div>
+				<div class="col-md-8bout">
+  
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  
+				</div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	</div>
+</div>
+ fin du test about me -->
+
+<!-- Portfolio -->
+
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
 						<h2>Here’s some Projects I made.</h2>
 						<p></p><!-- Text if needed -->
 					</header>
-					<div class="row">
-						<!--<div class="col-100 col-6-medium col-12-small">-->
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2"><!--CSS changé pour style 2-->
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Sales analysis with Python</a></h3>
-								<p>Obj : use <strong>Python</strong> to extract, clean and analyse sales data. Use a scalable and automated method.<br><br>
+					<div class="row2"><!--row--><!--Flex container ? no-->
+
+						<!--<div class="col-4 col-6-medium col-12-small">-->
+							<article class="box style3"><!--box style2--><!--Flex container ? yes-->
+								<div class="item1">
+									<a href="#" ><img src="images/pic01.jpg" alt="" /></a> <!--Flex item 1--><!--class="image featured"-->
+								</div >
+								<div class = "item2">
+									<h3><a href="#">Sales analysis with Python</a></h3>
+									<p>Obj : use <strong>Python</strong> to extract, clean and analyse sales data. Use a scalable and automated method.<br><br>
 									Extracting data from a folder full of raw csv, Data cleaning using Pandas, Exploratory Data Analysis, then Data Vizualisation w/ Matplotlib.  
-									<a href="#portfolio" class="image icon"><img src="images/github_logo.svg" alt="github_logo" /></a></p>  
+								</div>
+									<a href="#portfolio" class=" icon"><img src="images/github_logo.svg" alt="github_logo" width = "30" height = "30"/></a></p>  
 							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
+						<!--</div>-->
+						<!--<div class="col-4 col-6-medium col-12-small">-->
+							<article class="box style3"><!--style2-->
 								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 								<h3><a href="#">Project 2</a></h3>
 								<p>Obj : design an user friendly and real-time Dashboard, using cloud stored data.<br><br>
 									Dashboard design with Power BI.</p>
-									<a href="#portfolio" class="image icon"><img src="images/PowerBI_logo.png" alt="PowerBI_logo" /></a></p>
+									<a href="#portfolio" class=" icon"><img src="images/PowerBI_logo.png" alt="PowerBI_logo" width = "30" height = "30" max-height = "30" max-width= "30"/></a></p>
 							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
+						<!--</div>-->
+						<!--<div class="col-4 col-6-medium col-12-small">-->
+							<article class="box style3"><!--style2-->
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 								<h3><a href="#">Project 3</a></h3>
 								<p>Obj : Extract and use data stored in Datawarehouse.<br><br>
 									Use MySQL to request data. Then perform EDA. Design an interactive dashboard.</p>
-									<a href="#portfolio" class="image icon"><img src="images/logo_mysql.png" alt="MySQL_logo" /></a></p>
+									<a href="#portfolio" class=" icon"><img src="images/logo_mysql.png" alt="MySQL_logo" width = "40" height = "30" margin = auto display= block/></a></p>
 							</article>
-						</div>
+						<!--</div>-->
 						
 					</div>
 					<footer>
