adding the logo

--- a/index.html
+++ b/index.html
@@ -141,9 +141,13 @@
 								<div class = "item2">
 									<h3><a href="#">Sales analysis with Python</a></h3>
 									<p>Obj : use <strong>Python</strong> to extract, clean and analyse sales data. Use a scalable and automated method.<br><br>
-									Extracting data from a folder full of raw csv, Data cleaning using Pandas, Exploratory Data Analysis, then Data Vizualisation w/ Matplotlib.  
+									Extracting data from a folder full of raw csv, Data cleaning using Pandas, Exploratory Data Analysis, then Data Vizualisation w/ Matplotlib. </p> 
 								</div>
-									<a href="#portfolio" class=" icon"><img src="images/github_logo.svg" alt="github_logo" width = "30" height = "30"/></a></p>  
+									<a href="#portfolio" class=" icon"><img src="images/github_logo.svg" alt="github_logo" width = "30" height = "30"/></a> 
+									<a href="#portfolio" class=" icon"><img src="images/Python_logo.png" alt="Python_logo" width = "30" height = "30"/></a>
+									<a href="#portfolio" class=" icon"><img src="images/logo_pandas.png" alt="Pandas logo" width = "30" height = "30"/></a> 
+									<a href="#portfolio" class=" icon"><img src="images/logo_matplotlib.png" alt="Matplotlib logo" width = "30" height = "30"/></a>  
+ 
 							</article>
 						<!--</div>-->
 						<!--<div class="col-4 col-6-medium col-12-small">-->
